# fpgas.online-site

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml
pib/: asgi.base.py  asgi.py  settings.py  urls.py
pibdemos/src/pibdemos/: urls.py  utils.py  views.py
pibfpgas/src/pibfpgas/: admin.py  models.py  views.py
pibup/src/pibup/: forms.py  views.py
pistat/src/pistat/: consumers.py  ping.py  ping2.py  urls.py  views.py
